//   Protobuf code generated by NMEA message router application (c) Sterwen Technology 2023
//   generated on 2025-57-11:21:57
//   do not modify code


syntax = "proto3";

message Pgn65359Mfg1851ClassPb {  // Raymarine: Pilot heading
	uint32 sequence_id = 1;
	float true_heading = 2;
	float magnetic_heading = 3;
}

message Pgn65379Mfg1851ClassPb {  // Raymarine: Pilot mode
	uint32 sequence_id = 1;
	uint32 pilot_mode = 2;
	uint32 sub_mode = 3;
	uint32 pilot_mode_data = 4;
}

message Pgn126992ClassPb {  // System Time
	uint32 sequence_id = 1;
	uint32 source = 2;
	uint32 date = 3;
	float time = 4;
}

message Pgn127245ClassPb {  // Rudder
	uint32 instance = 1;
	uint32 direction = 2;
	float angle = 3;
	float position = 4;
}

message Pgn127250ClassPb {  // Vessel Heading
	uint32 sequence_id = 1;
	float heading = 2;
	float deviation = 3;
	float variation = 4;
	uint32 reference = 5;
}

message Pgn127258ClassPb {  // Magnetic Variation
	uint32 sequence_id = 1;
	uint32 source = 2;
	uint32 age_of_service = 3;
	float variation = 4;
}

message Pgn127488ClassPb {  // Engine Parameters, Rapid Update
	uint32 engine_instance = 1;
	float engine_speed = 2;
}

message Pgn127489ClassPb {  // Engine Parameters, Dynamic
	uint32 engine_instance = 1;
	float oil_pressure = 2;
	float oil_temperature = 3;
	float temperature = 4;
	float alternator_voltage = 5;
	float fuel_rate = 6;
	float total_engine_hours = 7;
}

message Pgn127507ClassPb {  // Charger Status
	uint32 charger_instance = 1;
	uint32 battery_instance = 2;
	uint32 operating_state = 3;
	uint32 charger_mode = 4;
	uint32 charger_enable = 5;
	uint32 equalization_pending = 6;
	uint32 eq_time_remaining = 7;
}

message Pgn127508ClassPb {  // Battery Status
	uint32 battery_instance = 1;
	float voltage = 2;
	float current = 3;
	float temperature = 4;
	uint32 sequence_id = 5;
}

message Pgn127751ClassPb {  // DC Voltage/Current
	uint32 sequence_id = 1;
	uint32 connection_number = 2;
	float voltage = 3;
	float current = 4;
}

message Pgn128259ClassPb {  // Speed
	uint32 sequence_id = 1;
	float speed_through_water = 2;
	float speed_over_ground = 3;
	uint32 speed_through_water_reference = 4;
}

message Pgn128267ClassPb {  // Water Depth
	uint32 sequence_id = 1;
	float depth = 2;
	float offset = 3;
	float range = 4;
}

message Pgn128275ClassPb {  // Distance Log
	uint32 date = 1;
	float time = 2;
	uint32 total_log = 3;
	uint32 trip_log = 4;
}

message Pgn129025ClassPb {  // Position, Rapid Update
	float latitude = 1;
	float longitude = 2;
}

message Pgn129026ClassPb {  // COG & SOG, Rapid Update
	uint32 sequence_id = 1;
	uint32 COG_reference = 2;
	float COG = 3;
	float SOG = 4;
}

message Pgn129029ClassPb {  // GNSS Position Data
	message Ref_StationsClassPb {
		uint32 GNSS_type = 1;
		uint32 station_id = 2;
		float age_DGNSS_correction = 3;
	}
	uint32 sequence_id = 1;
	uint32 date = 2;
	float time = 3;
	double latitude = 4;
	double longitude = 5;
	double altitude = 6;
	uint32 GNSS_type = 7;
	uint32 method = 8;
	uint32 integrity = 9;
	uint32 number_of_sv = 10;
	float HDOP = 11;
	float PDOP = 12;
	float geoidal_separation = 13;
	uint32 nb_ref_stations = 14;
	repeated Ref_StationsClassPb ref_stations = 15;
}

message Pgn129038ClassPb {  // AIS Class A Position Report
	uint32 message_id = 1;
	uint32 repeat_indicator = 2;
	int32 mmsi = 3;
	float longitude = 4;
	float latitude = 5;
	uint32 position_accuracy = 6;
	uint32 RAIM = 7;
	uint32 report_timestamp = 8;
	float COG = 9;
	float SOG = 10;
	uint32 communication_state = 11;
	uint32 transceiver_information = 12;
	float heading = 13;
	float rate_of_turn = 14;
	uint32 navigation_status = 15;
}

message Pgn129039ClassPb {  // AIS Class B Position Report
	uint32 message_id = 1;
	uint32 repeat_indicator = 2;
	int32 mmsi = 3;
	float longitude = 4;
	float latitude = 5;
	uint32 position_accuracy = 6;
	uint32 RAIM = 7;
	uint32 report_timestamp = 8;
	float COG = 9;
	float SOG = 10;
	uint32 communication_state = 11;
	uint32 transceiver_info = 12;
	float heading = 13;
	uint32 unit_type = 14;
	uint32 band = 15;
	uint32 handle_msg22 = 16;
	uint32 AIS_mode = 17;
	uint32 AIS_communication_state = 18;
}

message Pgn129283ClassPb {  // Cross Track Error
	uint32 sequence_id = 1;
	uint32 XTE_mode = 2;
	uint32 navigation_terminated = 3;
	float XTE = 4;
}

message Pgn129284ClassPb {  // Navigation Data
	uint32 sequence_id = 1;
	float distance_to_waypoint = 2;
	uint32 bearing_reference = 3;
	uint32 perpendicular_crossed = 4;
	uint32 arrival_circle_entered = 5;
	uint32 calculation_type = 6;
	float ETA_time = 7;
	uint32 ETA_date = 8;
	float bearing_origin_to_destination = 9;
	float bearing_position_to_destination = 10;
	uint32 origin_waypoint = 11;
	uint32 destination_waypoint = 12;
	float destination_latitude = 13;
	float destination_longitude = 14;
	float WCV = 15;
}

message Pgn129285ClassPb {  // Navigation - Route/WP Information
	message Wp_DefinitionsClassPb {
		uint32 waypoint_id = 1;
		string waypoint_name = 2;
		float waypoint_latitude = 3;
		float waypoint_longitude = 4;
	}
	uint32 start_waypoint_id = 1;
	uint32 nb_items = 2;
	uint32 database_id = 3;
	uint32 route_id = 4;
	uint32 navigation_direction = 5;
	uint32 supplementary_data = 6;
	string route_name = 7;
	repeated Wp_DefinitionsClassPb WP_definitions = 8;
}

message Pgn129539ClassPb {  // GNSS DOPs
	uint32 sequence_id = 1;
	uint32 desired_mode = 2;
	uint32 actual_mode = 3;
	float HDOP = 4;
	float VDOP = 5;
	float TDOP = 6;
}

message Pgn129540ClassPb {  // GNSS Sats in View
	message Satellites_DataClassPb {
		uint32 satellite_number = 1;
		float elevation = 2;
		float azimuth = 3;
		float signal_noise_ratio = 4;
		int32 range_residuals = 5;
		uint32 status = 6;
	}
	uint32 sequence_id = 1;
	uint32 mode = 2;
	uint32 sats_in_view = 3;
	repeated Satellites_DataClassPb satellites_data = 4;
}

message Pgn129794ClassPb {  // AIS Class A Static and Voyage Related Data
	uint32 message_id = 1;
	uint32 repeat_indicator = 2;
	int32 mmsi = 3;
	int32 IMO_number = 4;
	string callsign = 5;
	string ship_name = 6;
	uint32 type_of_ship = 7;
	float length = 8;
	float beam = 9;
	float position_from_starboard = 10;
	float position_from_bow = 11;
	uint32 ETA_date = 12;
	float ETA_time = 13;
	float draft = 14;
	string destination = 15;
	uint32 AIS_version = 16;
	uint32 GNSS_type = 17;
	uint32 DTE = 18;
	uint32 AIS_transceiver_info = 19;
}

message Pgn129809ClassPb {  // AIS Class B static data (msg 24 Part A)
	uint32 message_id = 1;
	uint32 repeat_indicator = 2;
	int32 mmsi = 3;
	string ship_name = 4;
}

message Pgn129810ClassPb {  // AIS Class B static data (msg 24 Part B)
	uint32 message_id = 1;
	uint32 repeat_indicator = 2;
	int32 mmsi = 3;
	uint32 type_of_ship = 4;
	string vendor_id = 5;
	string call_sign = 6;
	float length = 7;
	float beam = 8;
	float position_from_starboard = 9;
	float position_from_bow = 10;
	int32 mothership_mmsi = 11;
}

message Pgn130074ClassPb {  // Route and WP Service - WP List - WP Name & Position
	message Wp_DefinitionsClassPb {
		uint32 waypoint_id = 1;
		string waypoint_name = 2;
		float waypoint_latitude = 3;
		float waypoint_longitude = 4;
	}
	uint32 start_wp_id = 1;
	uint32 nb_items = 2;
	uint32 nb_valid_wp = 3;
	uint32 database_id = 4;
	repeated Wp_DefinitionsClassPb WP_definitions = 5;
}

message Pgn130306ClassPb {  // Wind Data
	uint32 sequence_id = 1;
	float wind_speed = 2;
	float wind_angle = 3;
	uint32 reference = 4;
}

message Pgn130310ClassPb {  // Environmental Parameters
	uint32 sequence_id = 1;
	float water_temperature = 2;
	float outside_air_temperature = 3;
	float atmospheric_pressure = 4;
}

message Pgn130311ClassPb {  // Environmental Parameters
	uint32 sequence_id = 1;
	uint32 temperature_instance = 2;
	uint32 humidity_instance = 3;
	float temperature = 4;
	float humidity = 5;
	float atmospheric_pressure = 6;
}

message Pgn130312ClassPb {  // Temperature
	uint32 sequence_id = 1;
	uint32 temperature_instance = 2;
	uint32 temperature_source = 3;
	float actual_temperature = 4;
	float set_temperature = 5;
}

message Pgn130314ClassPb {  // Actual Pressure
	uint32 sequence_id = 1;
	uint32 pressure_instance = 2;
	uint32 pressure_source = 3;
	float pressure = 4;
}

message Pgn130316ClassPb {  // Temperature Extended Range
	uint32 sequence_id = 1;
	uint32 temperature_instance = 2;
	uint32 temperature_source = 3;
	float actual_temperature = 4;
	float set_temperature = 5;
}

message Pgn130578ClassPb {  // Vessel Speed Components
	float longitudinal_speed_water = 1;
	float transverse_speed_water = 2;
	float longitudinal_speed_ground = 3;
	float transverse_speed_ground = 4;
	float stern_speed_water = 5;
	float stern_speed_ground = 6;
}

message Pgn130842Mfg1857ClassPb {  // Simnet: AIS Class B static data (msg 24 Part B)
	uint32 message_id = 1;
	uint32 repeat_indicator = 2;
	int32 mmsi = 3;
	uint32 type_of_ship = 4;
	string vendor_id = 5;
	string call_sign = 6;
	float length = 7;
	float beam = 8;
	float position_from_starboard = 9;
}

